--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 FORMAT=date,amount,,description
 CLASSIFIER_FILE=path/to/classifier/rules.json
 CLASSIFIER_TYPE=normal
+# START_DATE=2019-01-01
+# END_DATE=2023-09-01
